tdf#84834 sc: stricter type detection for dBASE files

The detection is rather sloppy, the bugdoc gets erroneously detected as
dBASE because it starts with '0', has a not-too-large header size at offset 4,
and a '\r' at a 32-byte alignment towards the start of the the not-too-large
header.

Add a plausibility check for the number of records in the file, which
helps for this bugdoc.

Change-Id: I466dfae18aa32fd62b79b9f524f22bea719721be
(cherry picked from commit 4e3ff19b33c84557fd20e68960499933b4e52638)
Reviewed-on: https://gerrit.libreoffice.org/26644
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>